--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-    "name": "axios-redis",
-    "version": "1.0.0",
-    "description": "An enhanced Axios wrapper with Redis caching and retry logic.",
-    "main": "index.js",
-    "scripts": {
-        "build": "babel src --out-dir dist",
-        "prepublishOnly": "npm run build",
-        "test": "babel-node --extensions '.js,.mjs' ./node_modules/.bin/jest"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/tarunmishra592/axios-redis.git"
-    },
-    "keywords": [
-        "axios",
-        "redis",
-        "http-client",
-        "cache",
-        "retry"
-    ],
-    "author": "Tarun Kumar",
-    "license": "MIT",
-    "dependencies": {
-        "axios": "^1.4.0",
-        "ioredis": "^5.0.0"
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.25.9",
-        "@babel/core": "^7.26.0",
-        "@babel/preset-env": "^7.26.0",
-        "babel-cli": "^6.26.0",
-        "babel-preset-env": "^1.7.0",
-        "jest": "^29.0.0"
-    }
+  "name": "json-bits",
+  "version": "1.0.0",
+  "description": "A package for compressing and decompressing JSON data",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "babel lib --out-dir dist",
+    "test": "jest",
+    "start": "webpack serve"
+  },
+  "keywords": [
+    "json",
+    "compression",
+    "gzip",
+    "base64"
+  ],
+  "author": "Tarun Kumar",
+  "license": "MIT",
+  "dependencies": {
+    "pako": "^2.0.4"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.25.9",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^8.4.1",
+    "jest": "^29.7.0",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
+  },
+  "peerDependencies": {
+    "@angular/common": "^12.0.0 || ^13.0.0",
+    "@angular/core": "^12.0.0 || ^13.0.0",
+    "react": "^17.0.0 || ^18.0.0"
+  }
 }
